[gd_scene load_steps=53 format=3 uid="uid://un8ioippgal5"]

[ext_resource type="Script" path="res://sprites/personajes/jugador/jugador.gd" id="1_f4jcw"]
[ext_resource type="Texture2D" uid="uid://cyg8g8gwqwb2" path="res://data/imagenes/personaje/Soldier-Attack01.png" id="2_6ia1u"]
[ext_resource type="Texture2D" uid="uid://br6reigo3wvay" path="res://data/imagenes/personaje/Soldier-Attack03.png" id="3_viacn"]
[ext_resource type="Texture2D" uid="uid://o7nsmwe213tv" path="res://data/imagenes/personaje/Soldier-Hurt.png" id="4_uc0i4"]
[ext_resource type="Texture2D" uid="uid://wt4afw2vroyr" path="res://data/imagenes/personaje/Soldier-Idle.png" id="5_vibkq"]
[ext_resource type="Texture2D" uid="uid://gwv7qji67kb5" path="res://data/imagenes/personaje/Soldier-Death.png" id="6_t562d"]
[ext_resource type="Texture2D" uid="uid://bxylrry0wcngv" path="res://data/imagenes/personaje/Soldier-Walk.png" id="7_vj4f2"]
[ext_resource type="AudioStream" uid="uid://dg62gtx5fndre" path="res://efectos/musica/dead.mp3" id="8_ko8jo"]
[ext_resource type="AudioStream" uid="uid://upx6hskp12mi" path="res://efectos/musica/jump.mp3" id="9_eo0w4"]
[ext_resource type="AudioStream" uid="uid://5dhdoo3f6ma7" path="res://efectos/musica/male_hurt.mp3" id="10_fb5fs"]
[ext_resource type="AudioStream" uid="uid://bvbup72rxkiyc" path="res://efectos/musica/slash.mp3" id="11_s65h7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mkbda"]
atlas = ExtResource("2_6ia1u")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bygf"]
atlas = ExtResource("2_6ia1u")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3i4x"]
atlas = ExtResource("2_6ia1u")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bskla"]
atlas = ExtResource("2_6ia1u")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axwb1"]
atlas = ExtResource("2_6ia1u")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7owsx"]
atlas = ExtResource("2_6ia1u")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uamc8"]
atlas = ExtResource("3_viacn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j682u"]
atlas = ExtResource("3_viacn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2whdn"]
atlas = ExtResource("3_viacn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_apu3a"]
atlas = ExtResource("3_viacn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mdp7"]
atlas = ExtResource("3_viacn")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvh3k"]
atlas = ExtResource("3_viacn")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvglf"]
atlas = ExtResource("3_viacn")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_opml2"]
atlas = ExtResource("3_viacn")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejybm"]
atlas = ExtResource("3_viacn")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cx62"]
atlas = ExtResource("4_uc0i4")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi4sq"]
atlas = ExtResource("4_uc0i4")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6xe1"]
atlas = ExtResource("4_uc0i4")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akw3n"]
atlas = ExtResource("4_uc0i4")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j64fr"]
atlas = ExtResource("5_vibkq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_outle"]
atlas = ExtResource("5_vibkq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0kl0"]
atlas = ExtResource("5_vibkq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0benr"]
atlas = ExtResource("5_vibkq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q52jt"]
atlas = ExtResource("5_vibkq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_togm0"]
atlas = ExtResource("5_vibkq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nj82"]
atlas = ExtResource("6_t562d")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr3sa"]
atlas = ExtResource("6_t562d")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxycs"]
atlas = ExtResource("6_t562d")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl6iq"]
atlas = ExtResource("6_t562d")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gqun"]
atlas = ExtResource("7_vj4f2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mejy0"]
atlas = ExtResource("7_vj4f2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxve6"]
atlas = ExtResource("7_vj4f2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjcr1"]
atlas = ExtResource("7_vj4f2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_upwnl"]
atlas = ExtResource("7_vj4f2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t2w6"]
atlas = ExtResource("7_vj4f2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_50end"]
atlas = ExtResource("7_vj4f2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_exdda"]
atlas = ExtResource("7_vj4f2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_t8jdk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkbda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bygf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3i4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bskla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axwb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7owsx")
}],
"loop": false,
"name": &"ataque1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uamc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j682u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2whdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apu3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mdp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvh3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvglf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opml2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejybm")
}],
"loop": false,
"name": &"ataque3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cx62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi4sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6xe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akw3n")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j64fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_outle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0kl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0benr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q52jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_togm0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nj82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr3sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxycs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl6iq")
}],
"loop": false,
"name": &"muerto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gqun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mejy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxve6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjcr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upwnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t2w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50end")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exdda")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep4r3"]
size = Vector2(2.78571, 2.92857)

[sub_resource type="CircleShape2D" id="CircleShape2D_3ovv6"]
radius = 1.14286

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysccb"]
size = Vector2(2.14286, 0.571429)

[node name="Caballero" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
position = Vector2(0, 1.35525e-20)
scale = Vector2(7, 7)
collision_mask = 74
platform_floor_layers = 4294901768
platform_wall_layers = 8
script = ExtResource("1_f4jcw")
jump_force = 500
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(0.16, 0.17125)
sprite_frames = SubResource("SpriteFrames_t8jdk")
animation = &"ataque1"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.98023e-08)
shape = SubResource("RectangleShape2D_ep4r3")

[node name="Node" type="Node" parent="."]

[node name="dead" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("8_ko8jo")

[node name="salto" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("9_eo0w4")

[node name="herido" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("10_fb5fs")

[node name="ataque" type="AudioStreamPlayer2D" parent="Node"]
stream = ExtResource("11_s65h7")

[node name="espada" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="espada"]
position = Vector2(2.28571, 6.31089e-30)
shape = SubResource("CircleShape2D_3ovv6")

[node name="salto" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="salto"]
position = Vector2(0, 1.71429)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_ysccb")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="espada" to="." method="_on_espada_body_entered"]
[connection signal="body_entered" from="salto" to="." method="_on_salto_body_entered"]
